--- a/templates/pages/login.html
+++ b/templates/pages/login.html
@@ -8,7 +8,8 @@
       <div class="mainContentBox">
         <div class="contentBox">
           <div class="loginContainer">
-            <form>
+            <form id="login_form" method="post" action="{% url 'login' %}">
+		{% csrf_token %}
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -19,10 +20,11 @@
                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
               </div>
               I've forgotten my password!
-            </form>
+            
 
             <button type="submit" class="btn-lg btn-primary">Register</button>
             <button type="submit" class="btn-lg btn-primary">Login</button>
+	  </form>
           </div>
         </div>
       </div>
