--- a/templates/pages/register.html
+++ b/templates/pages/register.html
@@ -21,28 +21,28 @@
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Confirm Password*</label>
+                  <label for="exampleInputPassword2">Confirm Password*</label>
                   <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Date Of Birth*</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter DOB">
+                  <label for="exampleDate">Date Of Birth*</label>
+                  <input type="number" class="form-control" id="exampleDate" placeholder="Enter DOB">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Secondary Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter secondary email">
+                  <label for="exampleInputEmail2">Secondary Email</label>
+                  <input type="email" class="form-control" id="exampleInputEmail2" aria-describedby="emailHelp" placeholder="Enter secondary email">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Phone Number</label>
-                  <input type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Phone Number">
+                  <label for="exampleNumber">Phone Number</label>
+                  <input type="number" class="form-control" id="exampleNumber" placeholder="Enter Phone Number">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Location</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Location">
+                  <label for="examplelocation">Location</label>
+                  <input type="text" class="form-control" id="examplelocation" placeholder="Enter Location">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Languages</label>
-                  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Languages">
+                  <label for="examplelanguage">Languages</label>
+                  <input type="text" class="form-control" id="examplelanguage" placeholder="Enter Languages">
                 </div>
               </div>
             </div>
@@ -142,7 +142,7 @@
                                 <option value="3">Three</option>
                               </select>
                 <button type="submit" class="btn-lg btn-primary">Delete Subject</button>
-                <br><br><br><button type="submit" class="btn-lg btn-primary">Register</button>
+                <br><br><br><input type="submit" name="Register" value="Register" />	
           </form>
           <!-- end registration form -->
           <br>
