--- a/templates/components/mainbutton.html
+++ b/templates/components/mainbutton.html
@@ -7,8 +7,8 @@
     <div class="mainButton">
       <center>
         {% if user.is_authenticated %}
-        <a href="{% url 'register' %}">Create a new post!</a>
-	<a href="{% url 'logout' %}">Logout</a>
+        <div class-"btn-col" button data-toggle="collapse" data-target="#newPost" href="{% url 'register' %}">Create a new post!</div>
+      </div>
         {% else %}
         <a href="{% url 'register' %}">Click Here To Sign Up!</a>
         {% endif %}
