--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -30,49 +30,27 @@
     });
   });
 </script>
-</script>
 
 <body>
-
-  <!-- Static navbar -->
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-      </div>
-      <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="../navbar-static-top/">Register</a></li>
-          <li><a href="../navbar-fixed-top/">Login</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- End nav bar -->
-
->>>>>>> Stashed changes
 
 {% block body_block %}
 
       <div class="row">
         <!-- left hand content - contains logo image + basic details -->
         <div class="col-sm-2">
-          
+
 
           <div class="mainContentBox">
             <form>
 
               <div class="form-group">
                 <label for="DOBinput">Date Of Birth*</label>
-                <input type="text" class="form-control" id="DOBinput" aria-describedby="Date Of Birth" placeholder="{{ User.dob }}">
+                <div class='input-group date' id='datetimepicker'>
+                  <input type='text' class="form-control" />
+                  <span class="input-group-addon">
+                  <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+                </div>
               </div>
               <div class="form-group">
                 <label for="SecondayEmail">Secondary Email</label>
