--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -17,7 +17,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if user.is_authenticated %}
-        <li><a href="{% url 'content' %}/GET={{ request.user.id }}">Profile</a></li>
+        <li><a href="{% url 'content' %}/?pk={{ request.user.id }}">Profile</a></li>
         <li><a href="{% url 'logout' %}">Logout</a></li>
         {% else %}
         <li><a href="{% url 'register' %}">Register</a></li>
